# Pipeline

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h
NodeCore/: CMakeLists.txt  connection.cpp  connection.h  flownode.cpp  flownode.h  node.cpp  node.h  pipeline_core_dll.h  port.cpp  port.h
Pipeline_App/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Pipeline_App_QML/: CMakeLists.txt  EditorRowCheck.qml  EditorRowCombo.qml  EditorRowText.qml  GraphicsView.qml  HierarchicalTableWidget.qml  Node.qml  NodeConnection.qml  NodeDialog.qml  PBreadCrumb.qml  PButton.qml  POutputConsole.qml  PTabButton.qml  PTextEdit.qml  ParameterGrid.qml  Port.qml  PropertyEditor.qml  QuickNodeListView.qml  Section.qml  TableGridWidget.qml  WidgetTitleHeader.qml  actornode.cpp  constants.h  graphmodelservice.cpp  graphmodelservice.h  main.cpp  main.qml  pythonactornode.cpp  pythonactornode.h  pythonfileactornode.cpp  pythonfileactornode.h  pythonscriptactornode.cpp  qml.qrc  resources.qrc
Pipeline_App_QML/bindings/: hierarchicaltabledata_python.cpp  nodeparameterlist_python.cpp  pipelinedata_python.cpp  pythonnoderesult_python.cpp  pythonnoderesult_python.h  pythonrunner.h
Pipeline_App_QML/contexts/: basedatacontext.cpp  basedatacontext.h  pythonprocessdatacontext.cpp  pythonprocessdatacontext.h
Pipeline_App_QML/data/: contextmetadata.cpp  contextmetadata.h  hierarchicaltabledata.cpp  hierarchicaltabledata.h  nodeparameter.h  nodeparameterlist.cpp  nodeparameterlist.h  pythonnoderesult.cpp  pythonnoderesult.h
Pipeline_App_QML/dispatchers/: baseactornodedispatcher.cpp  baseactornodedispatcher.h
Pipeline_App_QML/helpers/: serializehelper.cpp  serializehelper.h  stringhelper.cpp  stringhelper.h
Pipeline_App_QML/models/: nodemodel.cpp  nodemodel.h  nodeparamlistdialogmodel.cpp  nodeparamlistdialogmodel.h  nodeparamlistmodel.cpp  nodeparamlistmodel.h  nodeparamuilistmodel.cpp  nodeparamuilistmodel.h  nodetabledialogmodel.cpp  nodetabledialogmodel.h  nodetablemodel.cpp  nodetablemodel.h  nodetablesliceproxymodel.cpp  nodetablesliceproxymodel.h
Pipeline_App_QML/nodes/: actornode.cpp  actornode.h  pythonfileactornode.cpp  pythonfileactornode.h  pythonnodedialogactor.cpp  pythonnodedialogactor.h  pythonprocessactornode.cpp  pythonprocessactornode.h  pythonscriptactornode.cpp  pythonscriptactornode.h
Pipeline_App_QML/services/: appdataservice.cpp  appdataservice.h  graphmodelservice.cpp  graphmodelservice.h  nodemodelservice.cpp  nodemodelservice.h
Thread/: CMakeLists.txt  actor.cpp  actor.h  actorrunnable.cpp  actorrunnable.h  behaviour.cpp  behaviour.h
UI/: CMakeLists.txt
UI/Models/: basetreemodel.cpp  basetreemodel.h  connectiongraphmodel.cpp  connectiongraphmodel.h  connectiongraphviewmodel.cpp  connectiongraphviewmodel.h  constants.h  nodegraphmodel.cpp  nodegraphmodel.h  nodegraphtreemodel.cpp  nodegraphtreemodel.h  nodegraphviewmodel.cpp  nodegraphviewmodel.h  nodeuimanager.cpp  nodeuimanager.h  portgraphviewmodel.cpp  portgraphviewmodel.h  treeitem.cpp  treeitem.h
UI/Widgets/: nodegraphicsscene.cpp  nodegraphicsscene.h  nodegraphview.cpp  nodegraphview.h
UI/Widgets/GraphicsItems/: basenodegraphicsitem.cpp  basenodegraphicsitem.h  connectiongraphicsitem.cpp  connectiongraphicsitem.h  connectionpreviewgraphicsitem.cpp  connectionpreviewgraphicsitem.h  portgraphicsitem.cpp  portgraphicsitem.h
